@@ -73,8 +73,8 @@ if __FILE__ == $0 || $RUN
   require 'casserver/postambles'
   include CASServer::Postambles
 
-  if CASServer::Conf.server.to_s != 'mongrel' && $PID_FILE
-    $LOG.warn("Unable to create a pid file. You must use mongrel for this feature.")
+  if $PID_FILE && (CASServer::Conf.server.to_s != 'mongrel' || CASServer::Conf.server.to_s != 'webrick')
+    $LOG.warn("Unable to create a pid file. You must use mongrel or webrick for this feature.")
   end
 
   begin
